# fastapi_users_template

./: .env.example  .gitignore  README.md  docker-compose.yaml  pyproject.toml
fastapi-app/: Dockerfile  main.py
fastapi-app/api/: __init__.py
fastapi-app/api/api_v1/: __init__.py  users.py
fastapi-app/api/api_v1/db_api/: users.py
fastapi-app/core/: config.py
fastapi-app/core/models/: __init__.py  base.py  helper.py  user.py
fastapi-app/core/schemas/: __init__.py  users.py
fastapi-app/migrations/: env.py
